--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,4 +5,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
      - name: Print Greeting
-         run: echo 'Hellow World '
+       run: echo 'Hellow World '
+     - name: Print Good Bye
+       run: echo "Done - Bye!"
